k8s/position-simulator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: position-simulator-service
spec:
  selector:
    app: position-simulator
  ports:
    - port: 9002
      targetPort: 9002
