k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fleetman-node-gateway-vs
spec:
  hosts:
    - "fleetman-node.dotnet-works.com"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: /ws
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 8080
            host: position-tracker-service
    - match:
        - uri:
            prefix: /position-tracker/
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 9001
            host: position-tracker-service
    - match:
        - uri:
            prefix: /api/
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 9002
            host: position-simulator-service
    - match:
        - uri:
            regex: /?(.*)
      route:
        - destination:
            port:
              number: 80
            host: client-service
